# Maha

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  codeql-analysis.yml  prepare_release.yml  publish_pypi.yml
docs/: requirements.txt
docs/source/: Comparison.rst  changelog.rst  comparison.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  overview.rst  reference.rst
docs/source/changelog/: 0.1.0-changelog.rst  0.1.1-changelog.rst  0.2.0-changelog.rst  0.2.0pre-changelog.rst  0.3.0-changelog.rst
docs/source/comparisons/: duckling.rst
docs/source/contributing/: admonitions.rst  docstring.rst  guidelines.rst  references.rst
docs/source/development/: custom_dimension.rst  rexy.rst
maha/: __init__.py  deprecation.py  rexy.py  utils.py
maha/cleaners/: utils.py
maha/cleaners/functions/: __init__.py  contain.py  contains.py  contains_fn.py  filter.py  keep.py  keep_fn.py  normalize.py  normalize_fn.py  num2text.py  remove.py  remove_fn.py  replace.py  replace_fn.py
maha/cleaners/objects/: __init__.py  base_cleaner.py
maha/constants/: __init__.py  general.py  patterns.py  simple.py
maha/constants/arabic/: __init__.py  compound.py  extended.py  patterns.py  simple.py
maha/constants/english/: __init__.py  compound.py  patterns.py  simple.py
maha/constants/persian/: compound.py  simple.py
maha/datasets/: utils.py
maha/datasets/functions/: __init__.py  load_fn.py
maha/datasets/templates/: __init__.py  dataset.py  dataset_templates.py  name.py
maha/expressions/: __init__.py  arabic.py  english.py  general.py
maha/parsers/: constants.py  expressions.py  helper.py  utils.py
maha/parsers/duration/: constants.py  interface.py  rule.py  utils.py
maha/parsers/expressions/: __init__.py  duration.py  helper.py  money.py
maha/parsers/functions/: __init__.py  parse.py  parse_dimensions.py  parse_fn.py
maha/parsers/interfaces/: __init__.py  dimension.py  dimensions.py  enums.py  expression.py  expression_group.py  expression_result.py  expressions.py  text_expression.py  unit_expression.py  value_expression.py
maha/parsers/numeral/: constants.py  expressions.py  interface.py  rule.py  utils.py
maha/parsers/patterns/: money.py
maha/parsers/rules/: __init__.py  (+3 more)
maha/processors/: __init__.py  base_processor.py  basic_processors.py  file_processor.py  stream_processors.py  text_processor.py  utils.py
maha/rexy/: __init__.py  rexy.py
mahapy/: constants.py
mahapy/cleaners/: pipelines.py
mahapy/constants/: __init__.py  simple.py
sample_data/: surah_al-ala.txt  surah_al-ala_processed.txt  tweets.txt  wiki_arlang.txt  wiki_arnumbers.txt
tests/: conftest.py  test_deprecation.py  test_mahapy.py  utils.py
tests/cleaners/: test_contains.py  test_keep.py  test_normalize.py  test_num2text.py  test_remove.py  test_replace.py
tests/datasets/: test_load.py  test_templates.py
tests/parsers/: test_distance.py  test_duration.py  test_names.py  test_numeral.py  test_ordinal.py  test_parse.py  test_parse_dimensions.py  test_time.py
tests/processors/: test_base_processor.py  test_basic_processors.py  test_stream_processors.py
tools/: TEMPLATE.cff  delete_cache.sh  gen_changelog.py  update_names_parser.py
(+611 files in other folders)
