[tool.poetry]
name = "mahapy"
version = "0.1.0"
description = "Arabic Processing Library"
authors = ["TRoboto <m4bh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.3"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
Sphinx = "3.5.4"
furo = "^2021.4.11-beta.34"
pytest = "^6.2.4"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88